--- a/src/CoreBundle/Resources/config/routing_api_commentaire.yml
+++ b/src/CoreBundle/Resources/config/routing_api_commentaire.yml
@@ -15,3 +15,9 @@ commentaire_update:
     defaults: { _controller: CoreBundle:ApiCommentaire:update }
     requirements:
         _method: PUT
+
+commentaire_by_element:
+    path:     /element/{idElement}/comments/{limit}
+    defaults: { _controller: CoreBundle:ApiCommentaire:findByElement }
+    requirements:
+        _method: GET
